able to exclube unavailable (in someones draft team) players

--- a/models/optimization_model.ipynb
+++ b/models/optimization_model.ipynb
@@ -51,7 +51,8 @@
    "outputs": [],
    "source": [
     "# fixture list this season to predict\n",
-    "fixture_list_this_season = (pd.read_csv(\"../data/prem_results_20192020.csv\", header=None)).values"
+    "fixture_list_this_season = getFixtures(np.linspace(1, 38, 38).astype(int), team_id_file=\"../data/team_id_20192020.csv\",\n",
+    "                                       filelead=\"../\")"
    ]
   },
   {
@@ -103,8 +104,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# extract players already in teams\n",
+    "leagueId = \"\"\n",
+    "gw = 1\n",
+    "#aPlayers = all_players_params.loc[availablePlayers(leagueId, gw), :]\n",
+    "aPlayers = all_players_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# extract best current players\n",
-    "frame = all_players_params.loc[all_players_params.index[all_players_params['last_season'] == 3], :]\n",
+    "frame = aPlayers\n",
     "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
    ]
   },
@@ -115,7 +129,7 @@
    "outputs": [],
    "source": [
     "# extract best current goalkeepers\n",
-    "frame = all_players_params.loc[all_players_params.index[all_players_params['last_season'] == 3], :]\n",
+    "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'GKP'], :]\n",
     "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
    ]
@@ -127,7 +141,7 @@
    "outputs": [],
    "source": [
     "# extract best current defenders\n",
-    "frame = all_players_params.loc[all_players_params.index[all_players_params['last_season'] == 3], :]\n",
+    "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'DEF'], :]\n",
     "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
    ]
@@ -139,7 +153,7 @@
    "outputs": [],
    "source": [
     "# extract best current midfielders\n",
-    "frame = all_players_params.loc[all_players_params.index[all_players_params['last_season'] == 3], :]\n",
+    "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'MID'], :]\n",
     "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
    ]
@@ -151,7 +165,7 @@
    "outputs": [],
    "source": [
     "# extract best current forwards\n",
-    "frame = all_players_params.loc[all_players_params.index[all_players_params['last_season'] == 3], :]\n",
+    "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'FWD'], :]\n",
     "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
    ]
@@ -268,92 +282,6 @@
     "plot.xlabel('Expected Goals 2018/2019')\n",
     "plot.ylabel('Actual Goals 2018/2019')\n",
     "plot.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot with respect to last seasons mins played - for eligble players\n",
-    "plot.scatter(exp_mp, true_mp, s=6, color=cr)\n",
-    "plot.plot(true_mp, true_mp, linestyle=\"--\", color='g')\n",
-    "plot.xlim([0, 4500])\n",
-    "plot.ylim([0, 4500])\n",
-    "plot.xlabel('Expected Minutes Played 2018/2019')\n",
-    "plot.ylabel('Actual Minutes Played 2018/2019')\n",
-    "plot.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Team of players predictions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Gives predictions for a team's score on a gameweek"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# this gameweek fixtures\n",
-    "gw = 1\n",
-    "fixture_list_this_gw = getFixtures(gw, team_id_file=\"../data/team_id_20192020.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# players for all teams in league\n",
-    "league_id = \"\"\n",
-    "users = []\n",
-    "team_ids = getTeam(league_id, gw)[1]\n",
-    "\n",
-    "tm_exp = np.zeros(len(team_ids))\n",
-    "tm_std = np.zeros(len(team_ids))\n",
-    "\n",
-    "for j in range(len(team_ids)):\n",
-    "    \n",
-    "    user, tid, tm_players_id = getTeam(league_id, gw, team_ids[j])\n",
-    "    tm_players = []\n",
-    "    for i in range(len(tm_players_id)):\n",
-    "        tm_players.append(all_players_params.loc[all_players_params.index[all_players_params['ID'] == tm_players_id[i]], 'player'].values[0])\n",
-    "\n",
-    "    users.append(user)\n",
-    "    \n",
-    "    new_players_frame = all_players_params[all_players_params['player'].isin(tm_players)]\n",
-    "    new_players_frame = new_players_frame.reset_index()\n",
-    "    Niter = 250\n",
-    "    C, S = ComputeExpectedPoints(fixture_list_this_gw, teams, new_players_frame, all_teams_params,\n",
-    "                                 zerooutbottom=3, Niter=Niter)\n",
-    "    \n",
-    "    tm_exp[j] = np.sum(C)\n",
-    "    tm_std[j] = np.sqrt(np.sum(S ** 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame({\"User\": users, \"Expected Score\": tm_exp, \"Standard Deviation Score\": tm_std})\n",
-    "df"
    ]
   },
   {
