edit team model part of sampling nb

--- a/models/sampling.ipynb
+++ b/models/sampling.ipynb
@@ -49,9 +49,7 @@
    "outputs": [],
    "source": [
     "home_team = 'Man City'\n",
-    "away_team = 'Aston Villa'\n",
-    "home_form = 0  # points in last 5 games\n",
-    "away_form = 0  # points in last 5 games"
+    "away_team = 'Aston Villa'"
    ]
   },
   {
@@ -79,9 +77,8 @@
     "    mu = params[0]\n",
     "    a = params[1:(len(teams) + 1)]\n",
     "    d = params[(len(teams) + 1):((2 * len(teams)) + 1)]\n",
-    "    alpha = params[-1]\n",
-    "    result_lambdas = predict_fixtures(np.reshape(np.array([home_team, away_team]), ((1, 2))), np.reshape(np.array([home_form, away_form]), ((1, 2))),\n",
-    "                                      teams, mu, a, d, alpha)\n",
+    "    result_lambdas = predict_fixtures(np.reshape(np.array([home_team, away_team]), ((1, 2))),\n",
+    "                                      teams, mu, a, d)\n",
     "    goals_home[i] = np.random.poisson(result_lambdas[0][0])\n",
     "    goals_away[i] = np.random.poisson(result_lambdas[1][0])"
    ]
