outcome prediction script, and edit to team params after form removal

--- a/models/sampling.ipynb
+++ b/models/sampling.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "home_team = 'Man City'\n",
-    "away_team = 'Aston Villa'"
+    "home_team = 'Newcastle'\n",
+    "away_team = 'Arsenal'"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player = 'Kevin De Bruyne'\n",
+    "player = 'Pierre-Emerick Aubameyang'\n",
     "starting = None  # either true false or None\n",
     "home_players = list(all_players_params.loc[all_players_params.index[all_players_params['team'] == home_team], 'player'])\n",
     "away_players = list(all_players_params.loc[all_players_params.index[all_players_params['team'] == away_team], 'player'])\n",
