--- a/models/team_model.ipynb
+++ b/models/team_model.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "priormeans = np.ones((2 * len(teams)) + 2) * 0.0\n",
     "priorsds = np.ones((2 * len(teams)) + 2) * 0.1\n",
-    "beta = 0.00025\n",
+    "beta = 0.001\n",
     "niter = 50000\n",
     "\n",
     "# prior-out promoted teams\n",
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tm = 'Tottenham'\n",
+    "tm = 'Man City'\n",
     "plot.plot(est[:, (1 + np.where(teams == tm)[0][0]).astype(int)], 'r')\n",
     "plot.plot(est[:, (len(teams) + 1 + np.where(teams == tm)[0][0]).astype(int)], 'b')\n",
     "plot.show()\n",
@@ -142,7 +142,7 @@
    "outputs": [],
    "source": [
     "# save parameters\n",
-    "burn = int((4 * niter) / 5)\n",
+    "burn = int((2 * niter) / 5)\n",
     "mu_mean = np.array([np.mean(est[burn:, 0])])\n",
     "mu_sd = np.array([np.std(est[burn:, 0])])\n",
     "a_mean = np.mean(est[burn:, 1:(len(teams) + 1)], axis=0)\n",
@@ -185,7 +185,7 @@
     "\n",
     "wins = np.zeros(20)\n",
     "topfour = np.zeros(20)\n",
-    "niter = 1000\n",
+    "niter = 300\n",
     "\n",
     "# predict lambdas - average form\n",
     "muest = np.hstack((means[0], sds[0]))\n",
