modelling changes - intercept term

--- a/models/sampling.ipynb
+++ b/models/sampling.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "home_team = 'Newcastle'\n",
-    "away_team = 'Arsenal'"
+    "home_team = 'Liverpool'\n",
+    "away_team = 'Man City'"
    ]
   },
   {
@@ -74,11 +74,12 @@
     "    params = np.zeros(np.shape(tp)[0])\n",
     "    for j in range(np.shape(tp)[0]):\n",
     "        params[j] = np.random.normal(tp[j, 0], tp[j, 1])\n",
-    "    mu = params[0]\n",
-    "    a = params[1:(len(teams) + 1)]\n",
-    "    d = params[(len(teams) + 1):((2 * len(teams)) + 1)]\n",
+    "    intercept = params[0]\n",
+    "    mu = params[1]\n",
+    "    a = params[2:(len(teams) + 2)]\n",
+    "    d = params[(len(teams) + 2):((2 * len(teams)) + 2)]\n",
     "    result_lambdas = predict_fixtures(np.reshape(np.array([home_team, away_team]), ((1, 2))),\n",
-    "                                      teams, mu, a, d)\n",
+    "                                      teams, intercept, mu, a, d)\n",
     "    goals_home[i] = np.random.poisson(result_lambdas[0][0])\n",
     "    goals_away[i] = np.random.poisson(result_lambdas[1][0])"
    ]
@@ -87,7 +88,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player = 'Pierre-Emerick Aubameyang'\n",
+    "player = 'Kevin De Bruyne'\n",
     "starting = None  # either true false or None\n",
     "home_players = list(all_players_params.loc[all_players_params.index[all_players_params['team'] == home_team], 'player'])\n",
     "away_players = list(all_players_params.loc[all_players_params.index[all_players_params['team'] == away_team], 'player'])\n",
@@ -173,6 +174,13 @@
     "    print('Expected Minutes: ', np.mean(mins_played))\n",
     "    print('-----------------------------')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
