post draft bugs

--- a/models/optimization_model.ipynb
+++ b/models/optimization_model.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# fixture list this season to predict\n",
-    "fixture_list_this_season = getFixtures(np.linspace(1, 38, 38).astype(int), team_id_file=\"../data/team_id_20192020.csv\",\n",
+    "fixture_list_this_season = getFixtures(np.linspace(1, 1, 1).astype(int), team_id_file=\"../data/team_id_20192020.csv\",\n",
     "                                       filelead=\"../\")"
    ]
   },
@@ -105,10 +105,10 @@
    "outputs": [],
    "source": [
     "# extract players already in teams\n",
-    "leagueId = \"\"\n",
+    "leagueId = \"5HrRGo92iWoHuvYdX\"\n",
     "gw = 1\n",
-    "#aPlayers = all_players_params.loc[availablePlayers(leagueId, gw), :]\n",
-    "aPlayers = all_players_params"
+    "aPlayers = all_players_params.loc[availablePlayers(leagueId, gw), :]\n",
+    "#aPlayers = all_players_params"
    ]
   },
   {
@@ -161,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# extract best current forwards\n",
