--- a/models/player_model.ipynb
+++ b/models/player_model.ipynb
@@ -38,7 +38,10 @@
     "y2['team_name'] = team_code(y2['team'], season=\"2017/2018\")\n",
     "\n",
     "y3 = pd.read_csv(\"../data/draft_data/draft_player_raw_20182019.csv\")\n",
-    "y3['team_name'] = team_code(y3['team_id'], season=\"2019/2020\")  # this is set of only this seasons players and have this years codes"
+    "y3['team_name'] = team_code(y3['team_id'], season=\"2019/2020\")  # this is set of only this seasons players and have this years codes\n",
+    "\n",
+    "y4 = pd.read_csv(\"../data/draft_data/draft_player_raw.csv\")\n",
+    "y4['team_name'] = team_code(y4['team_id'], season=\"2019/2020\")  # this is set of only this seasons players and have this years codes\n"
    ]
   },
   {
@@ -77,7 +80,8 @@
    "source": [
     "# full name\n",
     "y2['full_name'] = (y2['first_name'] + ' ' + y2['second_name'])\n",
-    "y3['full_name'] = (y3['first_name'] + ' ' + y3['second_name'])"
+    "y3['full_name'] = (y3['first_name'] + ' ' + y3['second_name'])\n",
+    "y4['full_name'] = (y4['first_name'] + ' ' + y4['second_name'])"
    ]
   },
   {
@@ -88,6 +92,7 @@
    "source": [
     "# Season - find out if current list of players are new to this season\n",
     "y2['Season'] = 2\n",
+    "y4['Season'] = 4\n",
     "y3['Season'] = np.zeros(len(y3.index))\n",
     "for i in range(len(y3.index)):\n",
     "    dat = pd.read_csv(\"../data/draft_data/players_20182019/\" + y3.loc[y3.index[i], '_id'] + \".csv\")\n",
@@ -134,12 +139,16 @@
    "source": [
     "y2p = []\n",
     "y3p = []\n",
+    "y4p = []\n",
     "for i in range(len(y2.index)):\n",
     "    y2p.append(np.array(['GKP', 'DEF', 'MID', 'FWD'])[int(y2.loc[y2.index[i], \"element_type\"] - 1)])\n",
     "for i in range(len(y3.index)):\n",
     "    y3p.append(np.array(['GKP', 'DEF', 'MID', 'FWD'])[int(y3.loc[y3.index[i], \"element_type_id\"] - 1)])\n",
+    "for i in range(len(y4.index)):\n",
+    "    y4p.append(np.array(['GKP', 'DEF', 'MID', 'FWD'])[int(y4.loc[y4.index[i], \"element_type_id\"] - 1)])\n",
     "y2['position'] = y2p\n",
-    "y3['position'] = y3p"
+    "y3['position'] = y3p\n",
+    "y4['position'] = y4p"
    ]
   },
   {
@@ -149,11 +158,11 @@
    "outputs": [],
    "source": [
     "# only focus on players in league in current season (y3)\n",
-    "ID = y3['_id']\n",
-    "players = y3['full_name']\n",
-    "teams = y3['team_name']\n",
-    "positions = y3['position']\n",
-    "season = y3['Season']"
+    "ID = y4['_id']\n",
+    "players = y4['full_name']\n",
+    "teams = y4['team_name']\n",
+    "positions = y4['position']\n",
+    "season = y4['Season']"
    ]
   },
   {
@@ -164,14 +173,23 @@
    "source": [
     "# match them up to players from last year\n",
     "ids = []\n",
+    "ids3 = []\n",
     "for i in range(len(y2.index)):\n",
     "    ind = np.where(y2.loc[y2.index[i], 'full_name'] == players)[0]\n",
     "    if (len(ind) > 0):\n",
     "        ids.append(ID[ind[0]])\n",
     "    else:\n",
     "        ids.append(np.nan)\n",
+    "for i in range(len(y3.index)):\n",
+    "    ind = np.where(y3.loc[y3.index[i], 'full_name'] == players)[0]\n",
+    "    if (len(ind) > 0):\n",
+    "        ids3.append(ID[ind[0]])\n",
+    "    else:\n",
+    "        ids3.append(np.nan)\n",
     "y2ids = np.array(ids)\n",
-    "y2['ID'] = y2ids"
+    "y2['ID'] = y2ids\n",
+    "y3ids = np.array(ids3)\n",
+    "y3['ID'] = y3ids"
    ]
   },
   {
@@ -296,13 +314,14 @@
     "        players_parameters.loc[players_parameters.index[i], 'a_games'] = post_a_played\n",
     "        players_parameters.loc[players_parameters.index[i], 'b_games'] = post_b_played\n",
     "\n",
-    "    if y3.loc[y3.index[i], 'Season'] == 3:\n",
-    "        gms = y3.loc[y3.index[i], 'Games'] *  scale_y3\n",
-    "        goa = y3.loc[y3.index[i], 'total_goals'] * scale_y3\n",
-    "        mns = y3.loc[y3.index[i], 'total_mins'] * scale_y3\n",
-    "        assi = y3.loc[y3.index[i], 'total_assists'] * scale_y3\n",
-    "        tgoa =  y3.loc[y3.index[i], 'TGoals'] * scale_y3\n",
-    "        gms_available = y3.loc[y3.index[i], 'GamesAvailable'] * scale_y3\n",
+    "    if len(y3.index[players_parameters.loc[players_parameters.index[i], 'ID'] == y3['ID'].values]) > 0:\n",
+    "        idind = y3.index[players_parameters.loc[players_parameters.index[i], 'ID'] == y3['ID'].values][0]\n",
+    "        gms = y3.loc[y3.index[idind], 'Games'] *  scale_y3\n",
+    "        goa = y3.loc[y3.index[idind], 'total_goals'] * scale_y3\n",
+    "        mns = y3.loc[y3.index[idind], 'total_mins'] * scale_y3\n",
+    "        assi = y3.loc[y3.index[idind], 'total_assists'] * scale_y3\n",
+    "        tgoa =  y3.loc[y3.index[idind], 'TGoals'] * scale_y3\n",
+    "        gms_available = y3.loc[y3.index[idind], 'GamesAvailable'] * scale_y3\n",
     "\n",
     "        post_a_goals, post_b_goals, post_c_goals = update_goals_and_assists_simplex(players_parameters.loc[players_parameters.index[i], 'a_goals'],\n",
     "                                                                                    players_parameters.loc[players_parameters.index[i], 'b_goals'],\n",
@@ -327,7 +346,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "players_parameters"
