--- a/models/sampling.ipynb
+++ b/models/sampling.ipynb
@@ -48,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "home_team = 'Liverpool'\n",
-    "away_team = 'Man City'"
+    "home_team = 'Burnley'\n",
+    "away_team = 'Southampton'"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player = 'Kevin De Bruyne'\n",
+    "player = 'Erik Pieters'\n",
     "starting = None  # either true false or None\n",
     "home_players = list(all_players_params.loc[all_players_params.index[all_players_params['team'] == home_team], 'player'])\n",
     "away_players = list(all_players_params.loc[all_players_params.index[all_players_params['team'] == away_team], 'player'])\n",
