change of models for kante bonus / exp kbp

--- a/models/optimization_model.ipynb
+++ b/models/optimization_model.ipynb
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "C, S, CS, G, MP = ComputeExpectedPoints(fixture_list_this_season, teams, all_players_params, all_teams_params, Niter=500,\n",
+    "C, S, CS, G, MP, KB = ComputeExpectedPoints(fixture_list_this_season, teams, all_players_params, all_teams_params, Niter=50,\n",
     "                                        additionalstats=True)"
    ]
   },
@@ -74,13 +74,14 @@
    "outputs": [],
    "source": [
     "# add expected points and std to data frame\n",
-    "all_players_params['Expected Points 2019/2020'] = C\n",
-    "all_players_params['Std Points 2019/2020'] = S\n",
-    "all_players_params['Lower 95% Confidence Points 2019/2020'] = np.fmax(0, C - (2 * S))\n",
-    "all_players_params['Upper 95% Confidence Points 2019/2020'] = C + (2 * S)\n",
-    "all_players_params['Expected Goals 2019/2020'] = G\n",
-    "all_players_params['Expected Clean Sheets 2019/2020'] = CS\n",
-    "all_players_params['Expected Minutes Played 2019/2020'] = MP"
+    "all_players_params['Expected Points'] = C\n",
+    "all_players_params['Std Points'] = S\n",
+    "all_players_params['Lower 95% Confidence Points'] = np.fmax(0, C - (2 * S))\n",
+    "all_players_params['Upper 95% Confidence Points'] = C + (2 * S)\n",
+    "all_players_params['Expected Goals'] = G\n",
+    "all_players_params['Expected Clean Sheets'] = CS\n",
+    "all_players_params['Expected Minutes Played'] = MP\n",
+    "all_players_params['Expected Kante Bonus'] = KB"
    ]
   },
   {
@@ -91,10 +92,10 @@
    "source": [
     "# save to csv\n",
     "frame = all_players_params\n",
-    "frameref = frame[['player', 'position', 'team', 'Expected Points 2019/2020',\n",
-    "                  'Std Points 2019/2020', 'Lower 95% Confidence Points 2019/2020',\n",
-    "                  'Upper 95% Confidence Points 2019/2020', 'Expected Goals 2019/2020', 'Expected Clean Sheets 2019/2020',\n",
-    "                  'Expected Minutes Played 2019/2020']]\n",
+    "frameref = frame[['player', 'position', 'team', 'Expected Points',\n",
+    "                  'Std Points', 'Lower 95% Confidence Points',\n",
+    "                  'Upper 95% Confidence Points', 'Expected Goals', 'Expected Clean Sheets',\n",
+    "                  'Expected Minutes Played', 'Expected Kante Bonus']]\n",
     "frameref.to_csv(\"../data/expected_points_20192020.csv\")"
    ]
   },
@@ -114,12 +115,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# extract best current players\n",
     "frame = aPlayers\n",
-    "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
+    "frame.sort_values(by=['Expected Points'], ascending=False)[['ID', 'player', 'position', 'team', 'Expected Points', 'Std Points', 'Expected Goals', 'Expected Clean Sheets', 'Expected Kante Bonus']]"
    ]
   },
   {
@@ -131,7 +134,7 @@
     "# extract best current goalkeepers\n",
     "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'GKP'], :]\n",
-    "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
+    "frame.sort_values(by=['Expected Points'], ascending=False)[['ID', 'player', 'position', 'team', 'Expected Points', 'Std Points', 'Expected Goals', 'Expected Clean Sheets', 'Expected Kante Bonus']]"
    ]
   },
   {
@@ -143,7 +146,7 @@
     "# extract best current defenders\n",
     "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'DEF'], :]\n",
-    "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
+    "frame.sort_values(by=['Expected Points'], ascending=False)[['ID', 'player', 'position', 'team', 'Expected Points', 'Std Points', 'Expected Goals', 'Expected Clean Sheets', 'Expected Kante Bonus']]"
    ]
   },
   {
@@ -155,7 +158,7 @@
     "# extract best current midfielders\n",
     "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'MID'], :]\n",
-    "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
+    "frame.sort_values(by=['Expected Points'], ascending=False)[['ID', 'player', 'position', 'team', 'Expected Points', 'Std Points', 'Expected Goals', 'Expected Clean Sheets', 'Expected Kante Bonus']]"
    ]
   },
   {
@@ -169,7 +172,7 @@
     "# extract best current forwards\n",
     "frame = aPlayers\n",
     "frame = frame.loc[frame.index[frame['position'] == 'FWD'], :]\n",
-    "frame.sort_values(by=['Expected Points 2019/2020'], ascending=False)"
+    "frame.sort_values(by=['Expected Points'], ascending=False)[['ID', 'player', 'position', 'team', 'Expected Points', 'Std Points', 'Expected Goals', 'Expected Clean Sheets', 'Expected Kante Bonus']]"
    ]
   },
   {
@@ -192,7 +195,7 @@
     "all_teams_params = pd.read_csv(\"../parameters/all_teams_params.csv\", header=None)\n",
     "teams = pd.read_csv(\"../parameters/all_teams.csv\", header=None).values[:, 0]\n",
     "\n",
-    "C, S, CS, G, MP = ComputeExpectedPoints(fixture_list_last_season, teams, all_players_params, all_teams_params, Niter=50,\n",
+    "C, S, CS, G, MP, KB = ComputeExpectedPoints(fixture_list_last_season, teams, all_players_params, all_teams_params, Niter=50,\n",
     "                                        additionalstats=True)"
    ]
   },
