--- a/models/player_model.ipynb
+++ b/models/player_model.ipynb
@@ -120,6 +120,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tackles and interceptions\n",
+    "y3['TIRS'] = np.zeros(len(y3.index))\n",
+    "for i in range(len(y3.index)):\n",
+    "    dat = pd.read_csv(\"../data/draft_data/players_20182019/\" + y3.loc[y3.index[i], '_id'] + \".csv\")\n",
+    "    y3.loc[y3.index[i], 'TIRS'] = np.sum(((dat['mp'] > 0) * (1.0 / dat['mp']) * (dat['t'] + dat['i'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# teams goals when on pitch\n",
     "y2['TGoals'] = np.zeros(len(y2.index))  # approximate for this season\n",
     "for i in range(len(y2.index)):\n",
@@ -216,7 +229,8 @@
     "players_parameters_dict = {'ID': ID, 'player': players, 'team': teams, 'position': positions, 'last_season': season,\n",
     "                          'a_goals': np.zeros(len(ID)), 'b_goals': np.zeros(len(ID)), 'c_goals': np.zeros(len(ID)),\n",
     "                          'a_mins': np.zeros(len(ID)), 'b_mins': np.zeros(len(ID)),\n",
-    "                          'a_games': np.zeros(len(ID)), 'b_games': np.zeros(len(ID))}\n",
+    "                          'a_games': np.zeros(len(ID)), 'b_games': np.zeros(len(ID)),\n",
+    "                          'a_tir': np.zeros(len(ID)), 'b_tir': np.zeros(len(ID))}\n",
     "players_parameters = pd.DataFrame(data = players_parameters_dict)"
    ]
   },
@@ -248,6 +262,8 @@
     "        players_parameters.loc[players_parameters.index[j], 'b_mins'] = m_prior_b_g\n",
     "        players_parameters.loc[players_parameters.index[j], 'a_games'] = p_prior_a_g\n",
     "        players_parameters.loc[players_parameters.index[j], 'b_games'] = p_prior_b_g\n",
+    "        players_parameters.loc[players_parameters.index[j], 'a_tir'] = t_prior_a_g\n",
+    "        players_parameters.loc[players_parameters.index[j], 'b_tir'] = t_prior_b_g\n",
     "    if players_parameters.loc[players_parameters.index[j], 'position'] == 'MID':\n",
     "        players_parameters.loc[players_parameters.index[j], 'a_goals'] = ga_prior_a_m\n",
     "        players_parameters.loc[players_parameters.index[j], 'b_goals'] = ga_prior_b_m\n",
@@ -256,6 +272,8 @@
     "        players_parameters.loc[players_parameters.index[j], 'b_mins'] = m_prior_b_m\n",
     "        players_parameters.loc[players_parameters.index[j], 'a_games'] = p_prior_a_m\n",
     "        players_parameters.loc[players_parameters.index[j], 'b_games'] = p_prior_b_m\n",
+    "        players_parameters.loc[players_parameters.index[j], 'a_tir'] = t_prior_a_m\n",
+    "        players_parameters.loc[players_parameters.index[j], 'b_tir'] = t_prior_b_m\n",
     "    if players_parameters.loc[players_parameters.index[j], 'position'] == 'DEF':\n",
     "        players_parameters.loc[players_parameters.index[j], 'a_goals'] = ga_prior_a_d\n",
     "        players_parameters.loc[players_parameters.index[j], 'b_goals'] = ga_prior_b_d\n",
@@ -264,6 +282,8 @@
     "        players_parameters.loc[players_parameters.index[j], 'b_mins'] = m_prior_b_d\n",
     "        players_parameters.loc[players_parameters.index[j], 'a_games'] = p_prior_a_d\n",
     "        players_parameters.loc[players_parameters.index[j], 'b_games'] = p_prior_b_d\n",
+    "        players_parameters.loc[players_parameters.index[j], 'a_tir'] = t_prior_a_d\n",
+    "        players_parameters.loc[players_parameters.index[j], 'b_tir'] = t_prior_b_d\n",
     "    if players_parameters.loc[players_parameters.index[j], 'position'] == 'FWD':\n",
     "        players_parameters.loc[players_parameters.index[j], 'a_goals'] = ga_prior_a_f\n",
     "        players_parameters.loc[players_parameters.index[j], 'b_goals'] = ga_prior_b_f\n",
@@ -271,7 +291,9 @@
     "        players_parameters.loc[players_parameters.index[j], 'a_mins'] = m_prior_a_f\n",
     "        players_parameters.loc[players_parameters.index[j], 'b_mins'] = m_prior_b_f\n",
     "        players_parameters.loc[players_parameters.index[j], 'a_games'] = p_prior_a_f\n",
-    "        players_parameters.loc[players_parameters.index[j], 'b_games'] = p_prior_b_f"
+    "        players_parameters.loc[players_parameters.index[j], 'b_games'] = p_prior_b_f\n",
+    "        players_parameters.loc[players_parameters.index[j], 'a_tir'] = t_prior_a_f\n",
+    "        players_parameters.loc[players_parameters.index[j], 'b_tir'] = t_prior_b_f"
    ]
   },
   {
@@ -322,6 +344,7 @@
     "        assi = y3.loc[y3.index[idind], 'total_assists'] * scale_y3\n",
     "        tgoa =  y3.loc[y3.index[idind], 'TGoals'] * scale_y3\n",
     "        gms_available = y3.loc[y3.index[idind], 'GamesAvailable'] * scale_y3\n",
+    "        tirs = y3.loc[y3.index[idind], 'TIRS'] * scale_y3\n",
     "\n",
     "        post_a_goals, post_b_goals, post_c_goals = update_goals_and_assists_simplex(players_parameters.loc[players_parameters.index[i], 'a_goals'],\n",
     "                                                                                    players_parameters.loc[players_parameters.index[i], 'b_goals'],\n",
@@ -330,6 +353,9 @@
     "        post_a_mins, post_b_mins = update_mins_simplex(players_parameters.loc[players_parameters.index[i], 'a_mins'],\n",
     "                                                          players_parameters.loc[players_parameters.index[i], 'b_mins'],\n",
     "                                                          mns, gms)\n",
+    "        post_a_tir, post_b_tir = update_tir_simplex(players_parameters.loc[players_parameters.index[i], 'a_tir'],\n",
+    "                                                    players_parameters.loc[players_parameters.index[i], 'b_tir'],\n",
+    "                                                    tirs, gms)\n",
     "        post_a_played, post_b_played = update_games_played_simplex(players_parameters.loc[players_parameters.index[i], 'a_games'],\n",
     "                                                          players_parameters.loc[players_parameters.index[i], 'b_games'],\n",
     "                                                          gms, gms_available - gms)\n",
@@ -340,7 +366,9 @@
     "        players_parameters.loc[players_parameters.index[i], 'a_mins'] = post_a_mins\n",
     "        players_parameters.loc[players_parameters.index[i], 'b_mins'] = post_b_mins\n",
     "        players_parameters.loc[players_parameters.index[i], 'a_games'] = post_a_played\n",
-    "        players_parameters.loc[players_parameters.index[i], 'b_games'] = post_b_played"
+    "        players_parameters.loc[players_parameters.index[i], 'b_games'] = post_b_played\n",
+    "        players_parameters.loc[players_parameters.index[i], 'a_tir'] = post_a_tir\n",
+    "        players_parameters.loc[players_parameters.index[i], 'b_tir'] = post_b_tir"
    ]
   },
   {
