switch to skellam

--- a/models/player_model.ipynb
+++ b/models/player_model.ipynb
@@ -375,7 +375,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -398,6 +398,13 @@
     "# save parameters\n",
     "players_parameters.to_csv(\"../parameters/all_players_params.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
